- real about page - align history icon and numbers better - validate account info for google merchant paiement method (deposit) - settings option to hide tooltips ? - Legacy Launcher Icons (before API 25) - BUG : preset doesn't stay on first page when first page is dicecount - "home" button from dicestats shows "undefined" during transition - back is visible on index.html in ios layout - link to "rate this app" ? - android back button should dismiss dialog - back button (android) should not quit the app but trigger my "back"

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -212,9 +212,10 @@
 	background-repeat:no-repeat;
 	vertical-align:middle;
 	text-align:center;
-	line-height:1.5em;
-	width:1.5em;
-	height:1.5em;
+	font-size:14px;
+	line-height:2em;
+	width:2em;
+	height:2em;
 	margin-left:0;
 	margin-top:0;
 	float:left;
